# sai-msu

./: README.md  interface.py  satnum.py  setup.cfg  starlink.txt  starsatnumber.py
satcounter/: satnum.py
test/: tests.py
