[metadata]
name = satnum
version = 0.0.1
author = Valeriy Beskhmelniy
author_email = 'valeriy.beskhmelniy@gmail.com'
description = Counting satellites in the frame of KMO SAI telescope
long_description = file: README.md
url = 'https://github.com/waynet-inc/sai-msu'
license = MIT
keywords = astronomy, science, astrophysics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    skyfield>=1.31
	cachetools>=4.2.0

[options.packages.find]
exclude = 
    test
